Extended optional method parameters for primitive types